--- a/css/style.css
+++ b/css/style.css
@@ -34,12 +34,12 @@ defalult: 400
 
 html {
   font-size: 62.5%; /*set base font-size of 62.5% of 16px(default-size) i.e. 10px*/
-  font-family: sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
 
 h1 {
   font-size: 5.2rem;
-  letter-spacing: -0.5px;
+  letter-spacing: -0.8px;
   line-height: 1.05;
   color: #333;
   font-weight: 700;
@@ -63,6 +63,7 @@ h1 {
   padding: 1.6rem 3.2rem;
   border-radius: 1rem;
   display: inline-block;
+  font-weight: 600;
   transition: background-color 0.3s; /*always put this in the original state*/
 }
 
@@ -107,4 +108,29 @@ h1 {
 
 .margin-right-sm {
   margin-right: 1.6rem !important; /*helper class to add the margin to the right side of any element*/
+}
+
+.customer-images {
+  display: flex;
+  align-items: center;
+  gap: 2.4rem;
+  margin-top: 8rem;
+}
+.customer-img {
+  display: flex;
+}
+.customer-img img {
+  height: 4.8rem;
+  width: 4.8rem;
+  border-radius: 50%;
+  margin-right: -1.4rem;
+  border: 3px solid #fdf2e9;
+}
+
+.customer-numbers {
+  font-size: 1.6rem;
+}
+.customer-numbers span {
+  color: #e67e22;
+  font-weight: 700;
 }
