--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ h1 {
   color: #e67e22;
 }
 /*********************************/
-/*General Components*/
+/*General Reusable Components*/
 /*********************************/
 .btn:link,
 .btn:visited {
