--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ h1 {
   font-size: 5.2rem;
   letter-spacing: -0.8px;
   line-height: 1.05;
-  color: #333;
+  color: #2e1907;
   font-weight: 700;
 }
 
@@ -73,7 +73,7 @@ h1 {
 .nav-blocks:link,
 .nav-blocks:visited {
   text-decoration: none;
-  color: #333;
+  color: #2e1907;
   font-size: 1.8rem;
   transition: all 0.3s;
   font-weight: 500;
@@ -135,12 +135,40 @@ h1 {
   margin-right: 1.6rem !important; /*helper class to add the margin to the right side of any element*/
 }
 
+.container {
+  max-width: 120rem;
+  margin: 0 auto;
+}
+
+h2 {
+  font-size: 4.4rem;
+  color: #2e1907;
+  margin: 1.6rem 0 9.6rem 0;
+  line-height: 1.2;
+}
+.grid {
+  display: grid;
+  gap: 9.6rem;
+}
+
+.grid--2-col {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.step-number {
+  color: #ddd;
+  font-size: 8.6rem;
+  font-weight: 700;
+  letter-spacing: -3px;
+}
+
 /*********************************/
 /*Hero Section*/
 /*********************************/
 .Section-Hero {
   background-color: #fdf2e9;
   padding: 4.8rem 0 9.6rem 0;
+  /* margin-bottom: 9.6rem; */
 }
 .hero-summary {
   font-size: 2rem;
@@ -192,4 +220,21 @@ h1 {
 .customer-numbers span {
   color: #e67e22;
   font-weight: 700;
+}
+/*********************************/
+/*How-to Section*/
+/*********************************/
+.app-image {
+  width: 50%;
+}
+.Section-how-to > p {
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  color: #e67e22;
+  letter-spacing: 0.5px;
+  font-weight: 800;
+}
+
+.Section-how-to {
+  padding: 9.6rem;
 }
