--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,13 @@ h2 {
   margin: 1.6rem 0 9.6rem 0;
   line-height: 1.2;
 }
+h3 {
+  color: #2e1907;
+  font-size: 2.7rem;
+  font-weight: 700;
+  margin-bottom: 3rem;
+  /* letter-spacing: -0.5px; */
+}
 .grid {
   display: grid;
   gap: 9.6rem;
@@ -153,6 +160,7 @@ h2 {
 
 .grid--2-col {
   grid-template-columns: repeat(2, 1fr);
+  column-gap: 6.4rem;
 }
 
 .step-number {
@@ -162,6 +170,9 @@ h2 {
   letter-spacing: -3px;
 }
 
+.grid--center-v {
+  align-items: center;
+}
 /*********************************/
 /*Hero Section*/
 /*********************************/
@@ -225,16 +236,53 @@ h2 {
 /*How-to Section*/
 /*********************************/
 .app-image {
-  width: 50%;
+  width: 35%;
 }
 .Section-how-to > p {
   font-size: 1.6rem;
   text-transform: uppercase;
   color: #e67e22;
   letter-spacing: 0.5px;
-  font-weight: 800;
+  font-weight: 700;
 }
-
+.how-to-image {
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
 .Section-how-to {
   padding: 9.6rem;
+}
+
+.how-to-details {
+  font-size: 1.8rem;
+  line-height: 1.6;
+}
+
+.how-to-image::before,
+.how-to-image::after {
+  content: "";
+  display: block;
+  display: block;
+  position: absolute;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.how-to-image::before {
+  /*********************************/
+  /*Important trick to make blocks behind the image*/
+  /*********************************/
+  /*60% of parent's width*/
+  padding-bottom: 60%;
+  width: 60%;
+  background-color: #fdf2e9;
+  z-index: -2;
+}
+.how-to-image::after {
+  width: 50%;
+  padding-bottom: 50%;
+  background-color: #fae5d3;
+  z-index: -1;
 }
