--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,7 @@ h1 {
 .container {
   max-width: 120rem;
   margin: 0 auto;
+  /* padding: 9.6rem 0; */
 }
 
 h2 {
@@ -233,6 +234,28 @@ h3 {
   font-weight: 700;
 }
 /*********************************/
+/*Featured-In Section*/
+/*********************************/
+.featured {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #666;
+  text-align: center;
+  margin: 3.2rem 0;
+}
+
+.logos {
+  display: flex;
+  justify-content: space-around;
+}
+.logos img {
+  height: 3.2rem;
+  filter: brightness(0);
+  opacity: 50%;
+}
+
+/*********************************/
 /*How-to Section*/
 /*********************************/
 .app-image {
@@ -251,7 +274,7 @@ h3 {
   position: relative;
 }
 .Section-how-to {
-  padding: 9.6rem;
+  padding: 9.6rem 3.2rem; /*this may create trouble*/
 }
 
 .how-to-details {
