--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ h1 {
   border-radius: 1rem;
   display: inline-block;
   font-weight: 600;
-  transition: background-color 0.3s; /*always put this in the original state*/
+  transition: all 0.3s; /*always put this in the original state*/
 }
 
 .subscription:link,
@@ -119,6 +119,11 @@ h1 {
   background-color: #cf711f;
 }
 
+.learn-more {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
 .learn-more:link,
 .learn-more:visited {
   color: #555;
@@ -130,6 +135,11 @@ h1 {
   background-color: #fdf2e9;
   /*border: 2px solid #fff;     It is not used because it is change  the size of element while adding border ouside the element*/
   box-shadow: inset 0 0 0 3px #fff;
+}
+.learn-more-icon {
+  width: 1.6rem;
+  height: 1.6rem;
+  color: #555;
 }
 .margin-right-sm {
   margin-right: 1.6rem !important; /*helper class to add the margin to the right side of any element*/
@@ -166,7 +176,7 @@ h3 {
 
 .grid--3-col {
   grid-template-columns: repeat(3, 1fr);
-  column-gap: 3.2rem;
+  column-gap: 6.4rem;
 }
 
 .step-number {
@@ -187,7 +197,6 @@ strong {
   display: inline-block;
   font-size: 1.2rem;
   padding: 0.4rem 1.2rem;
-  background-color: #22c55e;
   font-weight: 700;
   border-radius: 10rem;
   text-transform: uppercase;
@@ -195,12 +204,21 @@ strong {
   margin: 1.2rem 0;
   margin-right: 1rem;
 }
-
-.tag-2 {
+.tag-veg {
+  background-color: #22c55e;
+}
+.tag-paleo {
   background-color: #fdba74;
   margin-right: 0;
 }
 
+.all-recipes {
+  text-align: center;
+}
+
+.center-content {
+  text-align: center;
+}
 /*********************************/
 /*Hero Section*/
 /*********************************/
@@ -374,9 +392,52 @@ strong {
   box-shadow: 0 1.2rem 2.4rem rgba(0, 0, 0, 0.075);
   border-radius: 1rem;
   overflow: hidden;
+  transition: all 0.5s;
 }
 
+.meals:hover {
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  transform: translate(0, -0.7rem);
+}
 .meal-detail {
   padding: 4.8rem;
   padding-top: 2.4rem;
+}
+
+.meal-list ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+.meal-list > ul li {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  color: #555;
+  gap: 1.6rem;
+}
+.meal-list-icon {
+  width: 2.4rem;
+  height: 2.4rem;
+  color: #e67e22;
+}
+
+.list:link,
+.list:visited {
+  text-align: center;
+  font-size: 1.6rem;
+  display: inline-block;
+  color: #e67e22;
+  margin-top: 3.2rem;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  transition: all 0.3s;
+  padding-bottom: 1px;
+}
+
+.list:hover,
+.list:active {
+  border-bottom: 1px solid transparent;
 }
