--- a/css/style.css
+++ b/css/style.css
@@ -450,6 +450,12 @@ strong {
 /*********************************/
 /*Testimonial Section*/
 /*********************************/
+
+.Section-testimonial {
+  background-color: #fdf2e9;
+  column-gap: 0;
+  /* padding: 1.6rem 1.6rem; */
+}
 .Testimonialimg {
   height: 6rem;
   border-radius: 50%;
@@ -457,7 +463,8 @@ strong {
 }
 
 .testimonial.grid--2-col {
-  gap: 4.8rem;
+  row-gap: 4.8rem;
+  column-gap: 9.6rem;
 }
 blockquote {
   font-size: 1.6rem;
@@ -465,10 +472,33 @@ blockquote {
   margin-bottom: 1rem;
 }
 .customer-name-testimonial {
-  font-size: 1.2rem;
-  color: #777;
+  font-size: 1.4rem;
+  /* font-weight: 500; */
+  color: #6f6f6f;
 }
 .testimonial-container > p {
   color: #e67e22;
   font-size: 1.6rem;
+}
+
+.gallery-item img {
+  display: block;
+  width: 100%;
+  transition: all 0.4s;
+}
+.gallery-item img:hover {
+  transform: scale(1.1);
+}
+.testimonial-container {
+  padding: 9.6rem;
+}
+.gallery {
+  /* row-gap: 1.6rem; */
+  gap: 1.6rem;
+  padding: 1.6rem;
+  align-content: center;
+}
+
+.gallery-item {
+  overflow: hidden;
 }
