--- a/css/style.css
+++ b/css/style.css
@@ -573,3 +573,27 @@ blockquote {
 .grid--2col-bt-margin {
   margin-bottom: 6.4rem;
 }
+
+.feature-icon {
+  width: 3.2rem;
+  height: 3.2rem;
+  padding: 1rem;
+  border-radius: 50%;
+  color: #e67e22;
+  background-color: #fdf2e9;
+}
+.feature-title {
+  font-size: 2.4rem;
+  line-height: 1.8;
+  font-weight: 700;
+}
+.feature-details {
+  font-size: 1.6rem;
+  color: #555;
+}
+
+.price-extra-info {
+  font-size: 1.6rem;
+  color: #666;
+  margin: 4.8rem 0 6.4rem 0;
+}
