--- a/css/style.css
+++ b/css/style.css
@@ -597,3 +597,27 @@ blockquote {
   color: #666;
   margin: 4.8rem 0 6.4rem 0;
 }
+/*********************************/
+/*CTA Section*/
+/*********************************/
+.cta {
+}
+
+.cta {
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  /* background-color: #e67e22; */
+  background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  height: 50rem;
+  overflow: hidden;
+  border-radius: 9px;
+}
+.cta-img {
+  background-image: linear-gradient(
+      rgba(235, 151, 78, 0.3),
+      rgba(230, 125, 34, 0.3)
+    ),
+    url(../img/eating.jpg);
+  background-size: cover;
+}
