--- a/css/style.css
+++ b/css/style.css
@@ -600,8 +600,6 @@ blockquote {
 /*********************************/
 /*CTA Section*/
 /*********************************/
-.cta {
-}
 
 .cta {
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
@@ -620,4 +618,23 @@ blockquote {
     ),
     url(../img/eating.jpg);
   background-size: cover;
+}
+.cta-form {
+  padding: 6.4rem 8rem;
+}
+
+.cta-form h2 {
+  margin: 0;
+  margin-bottom: 3.2rem;
+}
+.cta-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 6.4rem;
+}
+.form-cta {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 6.4rem;
+  row-gap: 3.2rem;
 }
