--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@ defalult: 400
 }
 
 *:focus {
-  outline: 4px dotted #e67e22;
-  outline-offset: 5px;
+  outline: 3px dotted #e67e22;
+  outline-offset: 1px;
 }
 html {
   font-size: 62.5%; /*set base font-size of 62.5% of 16px(default-size) i.e. 10px*/
@@ -185,6 +185,9 @@ h3 {
 }
 .grid--4-col {
   grid-template-columns: repeat(4, 1fr);
+}
+.grid--5-col {
+  grid-template-columns: repeat(5, 1fr);
 }
 .step-number {
   color: #ddd;
@@ -683,6 +686,92 @@ blockquote {
 }
 
 .form-cta *:focus {
-  outline: 4px dotted #fdf2e9;
-  outline-offset: 4px;
+  outline: 3px dotted #fdf2e9;
+  outline-offset: 1px;
+}
+
+/*********************************/
+/*Footer*/
+/*********************************/
+.footer {
+  border-top: 1px solid #aaa;
+  margin-top: 12.8rem;
+  margin-bottom: 4.8rem;
+}
+
+.footer-logo {
+  margin-bottom: 2.4rem;
+}
+.footer-heading {
+  font-size: 2rem;
+  color: #555;
+  margin-bottom: 2.4rem;
+}
+
+.footer-link:link,
+.footer-link:visited {
+  text-decoration: none;
+  font-size: 1.4rem;
+  color: #6f6f6f;
+  transition: all 0.3s;
+}
+.footer-link:hover,
+.footer-links:active {
+  color: #eb984e;
+}
+
+.footer-nav-links {
+  list-style: none;
+}
+
+.social-links {
+  display: flex;
+  justify-content: space-around;
+}
+.logo-link > ion-icon {
+  width: 2.4rem;
+  height: 2.4rem;
+  color: #6f6f6f;
+  transition: all 0.3s;
+}
+
+.copyright {
+  font-size: 1.4rem;
+  margin-top: auto;
+}
+.logo-division {
+  display: flex;
+  flex-direction: column;
+}
+address {
+  font-style: normal;
+  font-size: 1.4rem;
+  line-height: 1.4;
+  color: #555;
+}
+
+.footer-address {
+  display: flex;
+  flex-direction: column;
+}
+
+.contacts {
+  margin-top: auto;
+}
+.contacts a {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  text-decoration: none;
+  font-size: 1.4rem;
+  line-height: 1.4;
+  color: #6f6f6f;
+}
+
+.footer-section li {
+  margin-bottom: 1.8rem;
+}
+
+.footer-section li:last-child {
+  margin-bottom: 0;
 }
