--- a/css/style.css
+++ b/css/style.css
@@ -694,7 +694,7 @@ blockquote {
 /*Footer*/
 /*********************************/
 .footer {
-  border-top: 1px solid #aaa;
+  border-top: 1px solid #eee;
   margin-top: 12.8rem;
   margin-bottom: 4.8rem;
 }
